--- a/package.json
+++ b/package.json
@@ -17,12 +17,20 @@
     "express": "4.15.2",
     "mysql": "2.13.0",
     "sequelize": "3.30.4",
-    "validate.js": "0.11.1"
+    "validate.js": "0.11.1",
+    "vue": "2.3.2",
+    "vue-router": "2.5.3"
   },
   "devDependencies": {
+    "babel-core": "6.24.1",
+    "babel-loader": "7.0.0",
+    "babel-preset-es2015": "6.24.1",
     "browser-sync": "2.18.8",
     "gulp": "3.9.1",
     "gulp-mocha": "4.3.1",
-    "gulp-nodemon": "2.2.1"
+    "gulp-nodemon": "2.2.1",
+    "live-server": "1.2.0",
+    "vue-loader": "12.0.4",
+    "webpack": "2.5.1"
   }
 }
