--- a/package.json
+++ b/package.json
@@ -10,15 +10,20 @@
   "author": "Verem Dugeri <verem.dugeri@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "axios": "0.16.2",
     "bcrypt": "1.0.2",
     "body-parser": "1.17.1",
     "cors": "2.8.3",
     "dotenv": "4.0.0",
     "express": "4.15.2",
+    "jsonwebtoken": "7.4.1",
     "mysql": "2.13.0",
+    "quill": "1.2.6",
+    "quill-image-resize-module": "3.0.0",
     "sequelize": "3.30.4",
     "validate.js": "0.11.1",
     "vue": "2.3.2",
+    "vue-quill-editor": "2.2.1",
     "vue-router": "2.5.3"
   },
   "devDependencies": {
@@ -26,10 +31,12 @@
     "babel-loader": "7.0.0",
     "babel-preset-es2015": "6.24.1",
     "browser-sync": "2.18.8",
+    "css-loader": "0.28.4",
     "gulp": "3.9.1",
     "gulp-mocha": "4.3.1",
     "gulp-nodemon": "2.2.1",
     "live-server": "1.2.0",
+    "style-loader": "0.18.2",
     "vue-loader": "12.0.4",
     "webpack": "2.5.1"
   }
